8271925: ZGC: Arraycopy stub passes invalid oop to load barrier